--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/phoenix_db
 spring.datasource.username=phoenix_user
 spring.datasource.password=pass_123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=update
 
-server.port = 8082
+
+spring.main.allow-circular-references=true
+spring.thymeleaf.check-template-location=false
+#server.port = 8082
+
